@@ -1,4 +1,9 @@
-2005-07-31  Bob Halley  <halley@nominum.com>
+2005-09-29  Bob Halley  <halley@dnspython.org>
+
+	* dns/resolver.py (Resolver._compute_timeout): If time goes
+	  backwards a little bit, ignore it.
+
+2005-07-31  Bob Halley  <halley@dnspython.org>
 
 	* (Version 1.3.4 released)
 
